# address-book

./: .dockerignore  .gitignore  Dockerfile  README.md  address_book.db  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a5e53fc513af_create_address_table.py
app/: main.py
app/api/: dependencies.py
app/api/v1/endpoints/: addresses.py
app/core/: config.py  logging_config.py
app/crud/: crud_address.py
app/db/: session.py
app/models/: address.py
app/schemas/: address.py
tests/: conftest.py
tests/test_api/: test_addresses.py
