[project]
name = "address-book"
version = "0.1.0"
description = "A FastAPI application for managing an address book."
authors = [
    {name = "chikhlodkar@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
